# video-gemini-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  video_gemini_pipeline.py
