[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "video-gemini-pipeline"
version = "0.1.0"
description = "Gemini-powered video understanding pipeline with OCR, transcription, and coding-video analysis"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "opencv-python",
    "pytesseract",
    "openai-whisper",
    "scenedetect",
]

[project.scripts]
video-understand = "video_gemini_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
